# taste-kid

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: api-ci.yml
apps/api/: AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
apps/api/src/api/: config.py  db.py  logging_config.py  main.py  movies.py  rate_limit.py  similarity.py  users.py
apps/api/src/api/auth/: db.py  deps.py  identity.py  jwt.py  keycloak.py  passwords.py
apps/api/src/api/rerank/: features.py  scorer.py  style_keywords.py
apps/api/src/api/users/: __init__.py  db.py  embeddings.py  feed_cache.py  match.py  profile.py  queue.py  ratings.py  recommendations.py  scoring.py  types.py
apps/api/src/api/v1/: __init__.py  main.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_movies.py  test_next_movie.py  test_security.py  test_users.py
apps/api/tests/unit/: test_config_db.py  test_guest_feed.py  test_init_sql_btree_indexes.py  test_init_sql_safety.py  test_init_sql_trgm_indexes.py  test_init_sql_vector_indexes.py  test_rate_limiting.py  test_rerank.py
apps/web/: AGENTS.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  env.d.ts  index.css  main.tsx  types.ts
apps/web/src/components/: AppShell.tsx  EmptyState.tsx  Feed.tsx  MovieCard.tsx  NavBar.tsx  PageHeader.tsx  PosterImage.tsx  SectionHeader.tsx  Sidebar.tsx  StatCard.tsx
apps/web/src/components/layouts/: DashboardLayout.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tabs.tsx
apps/web/src/lib/: api.ts  auth-api.ts  hooks.ts  oidc.ts  store.ts  usePosterHydration.ts  utils.ts
apps/web/src/pages/: Dashboard.tsx  HistoryPage.tsx  HomePage.tsx  Login.tsx  MovieDetail.tsx  ProfilePage.tsx  RatePage.tsx  SearchPage.tsx  Signup.tsx
apps/web/src/pages/Dashboard/: Feed.tsx  Rate.tsx  Ratings.tsx  Recommendations.tsx  Search.tsx
docs/: similarity.md
infra/db/: init.sql
infra/keycloak/: realm.json
pipelines/ingest_tmdb/: AGENTS.md  pyproject.toml
pipelines/ingest_tmdb/src/: build_doc.py  embed_movies.py  ingest.py  reset_embeddings.py
pipelines/ingest_tmdb/src/embeddings/: factory.py  provider.py
scripts/: smoke_user_flow.sh  test_retrieval.sh  user_recs_demo.sh
