[project]
name = "tmdb-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "pydantic>=2.6",
  "PyJWT>=2.10",
  "passlib>=1.7.4",
  "slowapi>=0.1.9",
  "limits>=3.10",
  "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.14.0",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # Do not perform function calls in argument defaults (fastapi Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
